--- a/my-first-react-app/package.json
+++ b/my-first-react-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-intersection-observer": "^10.0.0",
     "react-router": "^7.9.6",
     "react-router-dom": "^7.9.6",
     "react-router-hash-link": "^2.4.3"
